RESOLVED FIXED215678
Missing WebRTC Metrics in iOS 14 Beta 5
https://bugs.webkit.org/show_bug.cgi?id=215678
Summary Missing WebRTC Metrics in iOS 14 Beta 5
cxxu
Reported 2020-08-19 18:44:44 PDT
WebRTC getStats API is missing critical metric values in iOS 14 Beta 5 (Tested on iphone 11) For the "video" "track" type , it is missing the following critical metrics: "kind" "jitterBufferDelay" "jitterBufferEmittedCount" For the "audio" "track" type , it is missing the following critical metrics: "kind" "jitterBufferDelay" "jitterBufferEmittedCount" "concealedSamples" "totalSamplesReceived"
Attachments
Patch (12.16 KB, patch)
2020-11-30 05:21 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2020-08-22 15:53:12 PDT
Alexey Proskuryakov
Comment 2 2020-08-22 15:54:00 PDT
Could you please clarify if this works as expected on iOS 13.6.1?
cxxu
Comment 3 2020-08-24 09:31:28 PDT
These metrics don't exist in iOS 13.6, many new metrics have been added since iOS 14. We have cut a ticket for adding the missing metrics (comparing to Chromium and w3c webrtc-stats) and has been closed (https://bugs.webkit.org/show_bug.cgi?id=212668), some of the metrics have been added (verified in iOS 14 beta 5), but there are still some important metrics that are missing.
youenn fablet
Comment 4 2020-11-30 05:21:11 PST
EWS
Comment 5 2020-11-30 11:29:43 PST
Committed r270255: <https://trac.webkit.org/changeset/270255> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415017 [details].
Note You need to log in before you can comment on or make changes to this bug.