Missing WebRTC Metrics in iOS 14 Beta 5 https://bugs.webkit.org/show_bug.cgi?id=215678 <rdar://problem/67625414>

Reviewed by Eric Carlson.

Source/WebCore:

Expose more stats and fix a bug in stat exposure code for kind.
Covered by updated test.

* Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.cpp:
(WebCore::fillInboundRtpStreamStats):
(WebCore::fillRemoteInboundRtpStreamStats):
(WebCore::fillOutboundRtpStreamStats):

LayoutTests:

* webrtc/video-stats.html:


Canonical link: https://commits.webkit.org/231964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270255 268f45cc-cd09-0410-ab3c-d52691b4dbfc